--- a/frontend-baslangic/medium-clone/index.html
+++ b/frontend-baslangic/medium-clone/index.html
@@ -14,8 +14,8 @@
     <title>Medium</title>
   </head>
 
-  <body>
-    <div class="bg-yellow border-bottom-dark">
+  <body style="margin-bottom: 100px">
+    <div class="bg-yellow border-bottom-dark fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
           <a class="navbar-brand" href="#"
@@ -59,7 +59,7 @@
         </nav>
       </div>
     </div>
-    <div class="bg-yellow py-5 border-bottom-dark">
+    <div class="bg-yellow py-5 border-bottom-dark  mt-5">
       <div class="div">
         <div class="container">
           <div class="row">
@@ -79,7 +79,7 @@
             </div>
             <div class="col-6">
               <img
-                src="https://picsum.photos/id/274/300/300"
+                src="https://picsum.photos/id/274/250/250"
                 alt=""
                 class="rounded-circle float-right"
               />
@@ -88,20 +88,330 @@
         </div>
       </div>
     </div>
+    
 
-    <div class="container">
+    <div class="container mt-5">
       <div class="row">
-        <div class="col-12"></div>
-        <div class="col-4">Lorem, ipsum dolor.</div>
-        <div class="col-4">Iste, rem fugiat.</div>
-        <div class="col-4">Illum, unde iure.</div>
-        <div class="col-4">Vel, ducimus fugit.</div>
-        <div class="col-4">Odio, quos rerum.</div>
-        <div class="col-4">Consectetur, quam quo.</div>
+        <div class="col-12 mb-4">
+          <h6>
+            <i class="fa-solid fa-shuttle-space"></i>
+            <strong class="ml-1">TRENDING ON MEDIUM</strong>
+          </h6>
+        </div>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <!-- <h6 class="text-black-50">
+                <strong>01</strong>
+              </h6> -->
+              <span class="bu fh fi fj fk fl">01</span>
+            </div>
+            <div class="col-10 ml-4">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/11/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1"> Tom Cooper</span>
+              <h5 class="mt-2 mb-0">
+                <strong> Ukraine War, 20 March 2023 </strong>
+              </h5>
+              <ul class="text-muted p-3 d-flex justify-content-start">
+                <li><small> Mar 20 · 5 min read </small></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <!-- <h6 class="text-black-50">
+                <strong>01</strong>
+              </h6> -->
+              <span class="bu fh fi fj fk fl">02</span>
+            </div>
+            <div class="col-10 ml-4">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/12/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1">
+                Arthur Hayes in Entrepreneur's...
+              </span>
+              <h5 class="mt-2 mb-0">
+                <strong> Kaiseki </strong>
+              </h5>
+              <ul class="text-muted p-3 d-flex justify-content-start">
+                <li><small> Mar 17 · 31 min read </small></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <!-- <h6 class="text-black-50">
+                <strong>01</strong>
+              </h6> -->
+              <span class="bu fh fi fj fk fl">03</span>
+            </div>
+            <div class="col-10 ml-4">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/14/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1">
+                Guodong (Troy) Zhao in Bootcamp</span
+              >
+              <h5 class="mt-2 mb-0">
+                <strong>
+                  A step-by-step guide to building a chatbot based on your
+                  own...
+                </strong>
+              </h5>
+              <ul class="text-muted p-3 d-flex justify-content-start">
+                <li><small> Mar 11 · 6 min read </small></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <!-- <h6 class="text-black-50">
+                <strong>01</strong>
+              </h6> -->
+              <span class="bu fh fi fj fk fl">04</span>
+            </div>
+            <div class="col-10 ml-4">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/15/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1"> Chicago White Sox </span>
+              <h5 class="mt-2 mb-0">
+                <strong>
+                  2023 South Side Servings: White Sox Announce New Food and...
+                </strong>
+              </h5>
+              <ul class="text-muted p-3 d-flex justify-content-start">
+                <li><small> Mar 22 · 4 min read </small></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <!-- <h6 class="text-black-50">
+                <strong>01</strong>
+              </h6> -->
+              <span class="bu fh fi fj fk fl">05</span>
+            </div>
+            <div class="col-10 ml-4">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/16/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1"> Mariners in From the Corner </span>
+              <h5 class="mt-2 mb-0">
+                <strong
+                  >Moto Pizza, New Walk-Off Markets and Second Din Tai
+                </strong>
+              </h5>
+              <ul class="text-muted p-3 d-flex justify-content-start">
+                <li><small> Mar 22 · 8 min read </small></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <!-- <h6 class="text-black-50">
+                <strong>01</strong>
+              </h6> -->
+              <span class="bu fh fi fj fk fl">06</span>
+            </div>
+            <div class="col-10 ml-4">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/17/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1">
+                Kevin Beaumont in DoublePulsar</span
+              >
+              <h5 class="mt-2 mb-0">
+                <strong>
+                  A look at CVE-2023–23415 — a Windows ICMP vulnerability...
+                </strong>
+              </h5>
+              <ul class="text-muted p-3 d-flex justify-content-start">
+                <li><small> Mar 20 · 5 min read </small></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+      </div>
+      <hr>
+      <div class="row">
+        <section class="col-sm-8">
+          <div class="row mt-5">
+            <div class="col-sm-7">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/18/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1"> Zulie Rane in Geek Culture</span>
+              <h5 class="mt-2 mb-0">
+                <strong>
+                  I Paid a Professional to Edit a ChatGPT-Written Article.
+                  Hilarity Ensued
+                </strong>
+                <p class="text-muted">
+                  The results were not pretty, but very funny.
+                </p>
+              </h5>
+              <ul class="list-inline">
+                <li class="list-inline-item">Feb 2</li>
+                <li class="list-inline-item">· 7 min read ·</li>
+                <li class="list-inline-item">
+                  <li class="list-inline-item btn btn-sm ai">AI</li>
+                </li>
+                <li class="list-inline-item">
+                  <i class="fa-regular fa-star fa-2xs"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-4 pl-0">
+              <img
+                class="w-100"
+                src="https://picsum.photos/id/19/300/200"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-sm-7">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/24/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1"> Eon Mattis
+                in
+                Startup Stash</span>
+              <h5 class="mt-2 mb-0">
+                <strong>
+                  Making Sense of Generative AI in 2023
+                </strong>
+                <p class="text-muted">
+                  What is Generative AI?
+                </p>
+              </h5>
+              <ul class="list-inline">
+                <li class="list-inline-item">Mar 6</li>
+                <li class="list-inline-item">· 6 min read
+                  ·</li>
+                <li class="list-inline-item">
+                  <li class="list-inline-item btn btn-sm ai">Startup</li>
+                </li>
+                <li class="list-inline-item">
+                  <i class="fa-regular fa-star fa-2xs"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-4 pl-0">
+              <img
+                class="w-100"
+                src="https://picsum.photos/id/25/300/200"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-sm-7">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="text-body ml-1"> Cassie Kozyrkov</span>
+              <h5 class="mt-2 mb-0">
+                <strong>
+                  Why everyone should try GPT-4, even the CEO
+                </strong>
+                <p class="text-muted">
+                  (Besides the fact that you don’t need technical skills to do it)
+                </p>
+              </h5>
+              <ul class="list-inline">
+                <li class="list-inline-item">Mar 20</li>
+                <li class="list-inline-item">· 5 min read ·</li>
+                <li class="list-inline-item">
+                  <li class="list-inline-item btn btn-sm ai">Artificial Intelligence
+
+                  </li>
+                </li>
+                <li class="list-inline-item">
+                  <i class="fa-regular fa-star fa-2xs"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-4 pl-0">
+              <img
+                class="w-100"
+                src="https://picsum.photos/id/22/300/200"
+                alt=""
+              />
+            </div>
+          </div>
+        </section>
+
+        <aside class="col-sm-4 mt-5">
+          <h6><strong>Discover more of what matters to you</strong></h6>
+          <ul class="list-inline aside-buttons">
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              Lorem
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              ipsum
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              Phasellus
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              inventore
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              consectetur
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              distinctio
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              perferendis
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              similique
+            </li>
+            <li class="btn btn-outline-secondary" style="width: 100px">
+              Phasellus
+            </li>
+          </ul>
+        </aside>
       </div>
     </div>
+    <!-- container end -->
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
   </body>
 </html>
